# cancel-culture

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README-idiot-proof.md  README.md  emsteck.md  idiot proof.md  idiot-proof.md  requirements  requirements.md
.github/workflows/: ci.yaml  coverage.yaml
examples/html/: 1323554460765925376.html
examples/json/: 890659426796945408.json
examples/wayback/: 1529393316344758279.html  ZHYT52YPEOCHJD5FZINSDYXGQZI22WJ4  cdx-result.json  store-export-test.tgz
examples/wayback/store/: contents.csv
schemas/: store.sql  tweet.sql  wb-tweet.sql
src/: cli.rs  lib.rs  smp.rs
src/browser/: mod.rs  scroll.rs  scroller.rs  twitter.rs
src/browser/twitter/: mod.rs  parser.rs  search.rs  tweet_lister.rs
src/reports/: deleted_tweets.rs  mod.rs
src/twitter/: config.rs  error.rs  method.rs  method_limit.rs  mod.rs  timeline.rs  tweet_lister.rs
src/twitter/rate_limited/: method_limit.rs  mod.rs  stream.rs
src/twitter/store/: mod.rs  wayback.rs
src/util/: sqlite.rs
src/wayback/: cdx.rs  error.rs  mod.rs  store.rs  web.rs
src/wbm/: cdx.rs  digest.rs  downloader.rs  item.rs  mod.rs  pacer.rs  store.rs  util.rs  valid.rs
src/wbm/store/: map.rs  mod.rs
src/wbm/tweet/: db.rs  mod.rs
store/: contents.csv
tests/: browser.rs  wayback_cdx.rs
