[package]
name = "cancel-culture"
version = "0.1.0"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/cancel-culture"
keywords = ["twitter"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
anyhow = "1.0"
bytes = "0.5.6"
chrono = "0.4.15"
clap = "3.0.0-beta.2"
csv="1.1.4"
data-encoding = "2.3.0"
egg-mode = "0.15"
fantoccini = "0.14.2"
flate2 = "1.0"
futures = "0.3.7"
futures-locks = "0.6.0"
futures-util = "0.3.6"
hyper = { version = "0.13.8", features = [ "stream" ] }
hyper-tls = "0.4.0"
image = "0.23.10"
itertools = "0.9.0"
lazy_static = "1.4.0"
libsqlite3-sys = "0.20.1"
log = "0.4"
pin-project = "1.0.1"
quick-error = "2.0.0"
regex = "1.4.1"
reqwest = { version = "0.10", features = ["json"] }
rusqlite = "0.24.1"
scraper = "0.12.0"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
sha-1 = "0.9.2"
simplelog = "0.8.0"
tinytemplate = "1.0"
tokio = { version = "0.2.22", features = ["macros"] }
tokio-test = "0.2.1"
toml = "0.5.7"
url = "2.2.0"

[features]
bundled-sqlite3 = ["libsqlite3-sys/bundled"]
