[package]
name = "cancel-culture"
version = "0.1.0"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/cancel-culture"
keywords = ["twitter"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
anyhow = "1.0"
bytes = "1.0"
chrono = "0.4.15"
clap = "3.0.0-beta.2"
csv="1.1.4"
data-encoding = "2.3.0"
displaydoc = "0.2"
egg-mode = { git = "https://github.com/egg-mode-rs/egg-mode", rev = "6b81073eba9c3b123ca0e80bdb5ef61d1758f131" }
fantoccini = { version = "0.17", features = [ "rustls-tls" ] }
file_diff = "1.0.0"
flate2 = "1.0"
fs_extra = "1.2.0"
futures = "0.3.7"
futures-locks = "0.6.0"
futures-util = "0.3.6"
html5ever = "0.25"
hyper = { version = "0.14", features = [ "stream" ] }
hyper-tls = "0.5"
image = "0.23.10"
itertools = "0.10.0"
lazy_static = "1.4.0"
libsqlite3-sys = "0.22.0"
log = "0.4"
pin-project = "1.0.1"
quick-error = "2.0.0"
regex = "1.4.1"
reqwest = { version = "0.11", features = ["gzip", "json"] }
rusqlite = "0.25.0"
scraper = "0.12.0"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
sha-1 = "0.9.2"
simplelog = "0.10.0"
tar = "0.4.30"
tempfile = "3.2.0"
thiserror = "1.0"
time = "0.1.44"
tinytemplate = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4.0"
toml = "0.5.7"
tryhard = "0.4.0"
url = "2.2.0"

[features]
bundled-sqlite3 = ["libsqlite3-sys/bundled"]

[[bin]]
name = "twblocks"
test = false
bench = false

[[bin]]
name = "twcc"
test = false
bench = false

[[bin]]
name = "twdl"
test = false
bench = false

[[bin]]
name = "twsearch"
test = false
bench = false

[[bin]]
name = "twshoot"
test = false
bench = false

[[bin]]
name = "wbdl"
test = false
bench = false

[[bin]]
name = "wbparse"
test = false
bench = false

[[bin]]
name = "wbsave"
test = false
bench = false

[[bin]]
name = "wbsearch"
test = false
bench = false

[[bin]]
name = "wbstore"
test = false
bench = false

[[bin]]
name = "wbtweets"
test = false
bench = false

[[bin]]
name = "wbvalidate"
test = false
bench = false
