[package]
name = "cancel-culture"
version = "0.1.0"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/cancel-culture"
keywords = ["twitter"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
anyhow = "1.0"
bytes = "1.0"
chrono = "0.4"
clap = { version = "3", features = ["derive"] }
csv="1.1"
data-encoding = "2.3"
displaydoc = "0.2"
egg-mode = "0.16"
egg-mode-extras = "0.3"
fantoccini = { version = "0.19", features = [ "rustls-tls" ] }
file_diff = "1.0"
flate2 = "1.0"
fs_extra = "1.2"
futures = "0.3"
futures-locks = "0.7"
futures-util = "0.3"
html5ever = "0.26"
hyper = { version = "0.14", features = [ "stream" ] }
hyper-tls = "0.5"
image = "0.24"
itertools = "0.10"
lazy_static = "1.4"
libsqlite3-sys = "0.25"
log = "0.4"
pin-project = "1.0"
regex = "1.4"
reqwest = { version = "0.11", features = ["gzip", "json"] }
rusqlite = "0.28"
scraper = "0.13"
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
sha-1 = "0.10"
simplelog = "0.12"
tar = "0.4"
tempfile = "3.2"
thiserror = "1.0"
time = "0.3"
tinytemplate = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"
toml = "0.5"
tryhard = "0.4"
url = "2.2"
wayback-rs = "0.5.1"

[features]
bundled-sqlite3 = ["libsqlite3-sys/bundled"]

[[bin]]
name = "twblocks"
test = false
bench = false

[[bin]]
name = "twcc"
test = false
bench = false

[[bin]]
name = "twsearch"
test = false
bench = false

[[bin]]
name = "twshoot"
test = false
bench = false

[[bin]]
name = "wbparse"
test = false
bench = false

[[bin]]
name = "wbsave"
test = false
bench = false

[[bin]]
name = "wbsearch"
test = false
bench = false

[[bin]]
name = "wbstore"
test = false
bench = false
